--- a/.github/workflows/flake-checker.yaml
+++ b/.github/workflows/flake-checker.yaml
@@ -14,10 +14,15 @@ jobs:
   flake-checker:
     name: Flake Checker
     runs-on: ubuntu-24.04
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@v21
       - uses: DeterminateSystems/magic-nix-cache-action@v13
+        with:
+          use-flakehub: false
       - uses: DeterminateSystems/flake-checker-action@v12
