Add: 新增自動啟動腳本以整合 Waybar、Hyprpaper、Fcitx5 和其他應用程式，並更新配置以改善桌面環境

--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -81,7 +81,8 @@
     },
     "network": {
         "format": "Online",
-        "format-disconnected": "Disconnected ⚠"
+        "format-disconnected": "Disconnected ⚠",
+        "on-click": "nm-connection-editor"
     },
     "custom/sep": {
         "format" : "|",
