--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,7 +25,8 @@ $snip = snip
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & 
+# exec-once = waybar & hyprpaper & fcitx5 -d & vmware-user-suid-wrapper & nm-applet --indicator
+exec-once = ~/.config/hypr/autostart.sh
 
 
 #############################
