修正記憶體顯示格式，將「Mem: {used}GiB」改為「Mem: {used}-GiB」

--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -60,7 +60,7 @@
         "tooltip": false
     },
     "memory": {
-        "format": "Mem: {used}GiB"
+        "format": "Mem: {used}-GiB"
     },
     "disk": {
         "interval": 60,
