重構 Hyprland 自動啟動腳本，新增狀態管理和重啟功能，並新增模式幫助腳本和子圖示守護進程

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -14,7 +14,6 @@ $terminal = foot
 $fileManager = dolphin
 $menu = rofi -show drun
 $reload_waybar = ~/.config/hypr/autostart.sh
-$snip = snip
 
 
 #################
@@ -168,27 +167,23 @@ debug {
 ####################
 ### KEYBINDINGSS ###
 ####################
+$mainMod = SUPER
+$alt = ALT
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+####################
+### Prefix Point ###
+####################
+bind = $mainMod, Space, submap, leader
+
+
+####################
+###  全域快捷鍵  ###
+####################
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, R, exec, $reload_waybar
-bind = $mainMod, S, exec, $snip
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, l, movefocus, l
-bind = $mainMod, h, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
+## Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -200,7 +195,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+## Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -212,17 +207,133 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
+## Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+## Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+## Volume control with media keys
+binde = , XF86AudioRaiseVolume, exec, pamixer -i 5
+binde = , XF86AudioLowerVolume, exec, pamixer -d 5
+bind  = , XF86AudioMute,        exec, pamixer -t
+# 全域結束
+
+
+# ===================================
+# Leader submap（prefix：$mainMod+Space）
+# ===================================
+submap = leader
+bind = , escape, submap, reset
+bind = , Space,  submap, reset
+
+# --- 分類入口（像 Qtile KeyChord / tmux prefix） ---
+bind = , W, submap, window     # 視窗操作模式
+bind = , R, submap, resize     # 調整大小模式
+bind = , M, submap, move       # 移動視窗模式（類似 shuffle）
+bind = , S, submap, screenshot # 截圖模式
+bind = , P, submap, power      # 系統電源/登出模式
+bind = , A, submap, apps       # 啟動應用模式
+
+
+
+submap = reset
+
+# ===================================
+# Apps mode（Qtile: d/e/w/terminal 類）
+# ===================================
+submap = apps
+bind = , escape, submap, reset
+bind = , T, exec, $terminal
+bind = , E, exec, $fileManager
+bind = , B, exec, firefox
+bind = , D, exec, $menu
+
+submap = reset
+
+
+# ===================================
+# Window mode（Qtile: focus、layout 基本）
+# ===================================
+submap = window
+bind = , escape, submap, reset
+
+bind = , Q, killactive, # 關閉當前視窗
+bind = , F, fullscreen, # 切換全屏
+bind = , V, togglefloating,
+bind = , R, exec, $reload_waybar
+
+submap = reset
+
+# ===================================
+# Move mode（Qtile: shuffle_*）
+# ===================================
+submap = move
+bind = , escape, submap, reset
+
+bind = , L, movefocus, l
+bind = , H, movefocus, r
+bind = , K, movefocus, u
+bind = , J, movefocus, d
+
+submap = reset
+
+# ===================================
+# Resize mode（Qtile: grow_*）
+# ===================================
+submap = resize
+bind = , escape, submap, reset
+
+bind = , H, resizeactive, -30 0
+bind = , L, resizeactive,  30 0
+bind = , K, resizeactive,  0 -30
+bind = , J, resizeactive,  0  30
+
+submap = reset
+
+# ===================================
+# Screenshot mode（Wayland: grim/slurp/wl-copy）
+# ===================================
+submap = screenshot
+bind = , escape, submap, reset
+
+# 選取區域 → 剪貼簿
+bind = , S, exec, grim -g "$(slurp)" - | wl-copy
+
+# 全螢幕 → 剪貼簿
+bind = , A, exec, grim - | wl-copy
+
+# 選取區域 → 存檔
+bind = , F, exec, sh -lc 'dir="$HOME/Pictures/Screenshots"; mkdir -p "$dir"; file="$dir/$(date +%Y-%m-%d_%H-%M-%S).png"; grim -g "$(slurp)" "$file" && notify-send "Screenshot saved" "$file"'
+
+# 全螢幕 → 存檔
+bind = , P, exec, sh -lc 'dir="$HOME/Pictures/Screenshots"; mkdir -p "$dir"; file="$dir/$(date +%Y-%m-%d_%H-%M-%S).png"; grim "$file" && notify-send "Screenshot saved" "$file"'
+
+submap = reset
+
+# ===================================
+# Power mode（Qtile: shutdown / reload 類）
+# ===================================
+submap = power
+bind = , escape, submap, reset
+
+bind = , L, exec, loginctl lock-session
+bind = , O, exit
+bind = , R, exec, systemctl reboot
+bind = , P, exec, systemctl poweroff
+
+submap = reset
+
+# ===================================
+# Scratchpad（Qtile DropDown 模擬：special workspace）
+# ===================================
+# toggle special workspace:magic
+bind = $mainMod, U, togglespecialworkspace, magic
+bind = $mainMod SHIFT, U, movetoworkspace, special:magic
+
+
 
 
 ##############################
