新增 submap-daemon 和 show-mode-help 腳本，重構 autostart.sh 和 hyprland.conf，改善模式管理和狀態顯示

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -183,6 +183,7 @@ bind = $mainMod, Space, submap, leader
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, D, exec, $menu
 
+
 ## Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -228,6 +229,7 @@ bind  = , XF86AudioMute,        exec, pamixer -t
 submap = leader
 bind = , escape, submap, reset
 bind = , Space,  submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 # --- 分類入口（像 Qtile KeyChord / tmux prefix） ---
 bind = , W, submap, window     # 視窗操作模式
@@ -245,7 +247,10 @@ submap = reset
 # Apps mode（Qtile: d/e/w/terminal 類）
 # ===================================
 submap = apps
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
+
 bind = , T, exec, $terminal
 bind = , E, exec, $fileManager
 bind = , B, exec, firefox
@@ -258,7 +263,9 @@ submap = reset
 # Window mode（Qtile: focus、layout 基本）
 # ===================================
 submap = window
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 bind = , Q, killactive, # 關閉當前視窗
 bind = , F, fullscreen, # 切換全屏
@@ -271,7 +278,9 @@ submap = reset
 # Move mode（Qtile: shuffle_*）
 # ===================================
 submap = move
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 bind = , L, movefocus, l
 bind = , H, movefocus, r
@@ -284,7 +293,9 @@ submap = reset
 # Resize mode（Qtile: grow_*）
 # ===================================
 submap = resize
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 bind = , H, resizeactive, -30 0
 bind = , L, resizeactive,  30 0
@@ -297,7 +308,9 @@ submap = reset
 # Screenshot mode（Wayland: grim/slurp/wl-copy）
 # ===================================
 submap = screenshot
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 # 選取區域 → 剪貼簿
 bind = , S, exec, grim -g "$(slurp)" - | wl-copy
@@ -317,7 +330,9 @@ submap = reset
 # Power mode（Qtile: shutdown / reload 類）
 # ===================================
 submap = power
+
 bind = , escape, submap, reset
+bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 bind = , L, exec, loginctl lock-session
 bind = , O, exit
