--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/walls/wall1.png
-wallpaper = ,~/walls/wall1.png
+preload = ~/Pictures/wallpapers/cyberpunk.png
+wallpaper = ,~/Pictures/wallpapers/cyberpunk.png
