更新 hyprland.conf 和 hyprpaper.conf，修正壁紙路徑；更新 hyprland.nix，修正圖片來源路徑；新增 hyprlock 的 PAM 配置；新增 cyberpunk.png 壁紙檔案

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -42,6 +42,8 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
+env = WLR_DRM_NO_MODIFIERS,1
+env = WLR_RENDERER_ALLOW_SOFTWARE,1
 
 
 #####################
@@ -335,7 +337,7 @@ bind = , escape, submap, reset
 bind = , SLASH, exec, ~/.config/hypr/scripts/show-mode-help.sh
 
 bind = , L, exec, loginctl lock-session
-bind = , O, exit
+bind = , Q, exit
 bind = , R, exec, systemctl reboot
 bind = , P, exec, systemctl poweroff
 
