--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/wallpapers/cyberpunk.png
-wallpaper = ,~/Pictures/wallpapers/cyberpunk.png
+preload = /home/derrick/Pictures/wallpapers/cyberpunk.png
+wallpaper = ,/home/derrick/Pictures/wallpapers/cyberpunk.png
