--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/derrick/Pictures/wallpapers/cyberpunk.png
-wallpaper = ,/home/derrick/Pictures/wallpapers/cyberpunk.png
+preload = /home/derrick/Pictures/wallpapers/cyberpunk.jpeg
+wallpaper = ,/home/derrick/Pictures/wallpapers/cyberpunk.jpeg
