新增全域快捷鍵以便於窗口移動

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -275,6 +275,11 @@ bind = , H, movefocus, r
 bind = , K, movefocus, u
 bind = , J, movefocus, d
 
+bind = SHIFT, L, movewindow, r
+bind = SHIFT, H, movewindow, l
+bind = SHIFT, K, movewindow, u
+bind = SHIFT, J, movewindow, d
+
 submap = reset
 
 # ===================================
