新增 snappy-switcher 支援，包含配置檔與主題，並在 autostart 和 hyprland 配置中加入相關設定

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -171,6 +171,8 @@ bind = $mainMod, Space, submap, leader
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, D, exec, $menu
 
+bind = $alt, Tab, exec, snappy-switcher next
+bind = $alt SHIFT, Tab, exec, snappy-switcher prev
 
 ## Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
