--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,9 +23,9 @@ exec-once = ~/.config/hypr/autostart.sh
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = GTK_THEME,Tokyo-Night-Dark
-env = GTK_ICON_THEME,Adwaita
-env = XCURSOR_THEME,Adwaita
+env = GTK_THEME,Tokyonight-Dark
+env = GTK_ICON_THEME,Bibata-Modern-Ice
+env = XCURSOR_THEME,Bibata-Modern-Ice
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
